dev/tests/cases/neg/11_unclosed_interp.tv
df main() -> void {
    set x: i64 = 1;
    echo!("value {x");
}
